# pandas_auto_join

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
example/: example.py
example/data/: airports.csv  bag.csv  final.csv  flights.csv
example/datasets/flights/: aircrafts.csv  flights_joined.csv
example/datasets/web/fsu name to username/: ground truth.csv
example/datasets/web/sharif email to url/: ground truth.csv
example/datasets/web/sharif username to email/: ground truth.csv
examples/: example.py
examples/datasets/flights/: airlines.csv  airlines_duplicates.csv  baggage.csv  flight_times.csv  flights.csv
examples/datasets/web/k12 name to email/: ground truth.csv
examples/datasets/web/vegetables/: ground truth.csv
src/: cli.py  config.py  pandas_auto_join.py
src/pandas_auto_join/: __init__.py  __main__.py  config.py
