# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas_auto_join"
version = "1.0.0"
description = "Pandas Auto-Join Framework for auto joining multiple dataframes."
readme = "README.md"
authors = [{ name = "Finn Dohrn" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pandas","join","automl"]
dependencies = [
    "pandas"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/bitnulleins/pandas_auto_join"

[project.scripts]
run = "pandas_auto_join.__main__:main"