[metadata]
name = pandas_auto_join
version = 0.1.3
author = bitnulleins
keywords = pandas, auto join, automl
description = Panda extension for the automatic dataframe join
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitnulleins/pandas_auto_join
project_urls =
    Docs = https://github.com/bitnulleins/pandas_auto_join/blob/main/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
